include/pr/view3d/dll/view3d.h

			struct LdrObject;
		using Object = pr::ldr::LdrObject;
	struct View3DV4;
	struct View3DM4x4;
	struct View3DBBox;
	struct View3DVertex;
	struct View3DTextureOptions;
	using View3DColour = unsigned int;
	using View3D_ReportErrorCB = void (__stdcall *)(void* ctx, wchar_t const* msg, wchar_t const* filepath, int line, int64_t pos);
	enum class EView3DAnimCommand : int
	{
		Reset, // Reset the the 'time' value
		Play,  // Run continuously using 'time' as the step size, or real time if 'time' == 0
		Stop,  // Stop at the current time.
		Step,  // Step by 'time' (can be positive or negative)
	};
	struct View3DV4
	{
		float x, y, z, w;
	};
	struct View3DM4x4
	{
		View3DV4 x, y, z, w;
	};
	struct View3DBBox
	{
		View3DV4 centre;
		View3DV4 radius;
	};
	struct View3DVertex
	{
		View3DV4 pos;
		View3DV4 norm;
		View3DV2 tex;
		View3DColour col;
		UINT32 pad;
	};
	struct View3DNugget
	{
		EView3DTopo       m_topo;
		EView3DGeom       m_geom;
		EView3DCullMode   m_cull_mode;
		EView3DFillMode   m_fill_mode;
		UINT32            m_v0, m_v1;       // Vertex buffer range. Set to 0,0 to mean the whole buffer
		UINT32            m_i0, m_i1;       // Index buffer range. Set to 0,0 to mean the whole buffer
		EView3DNuggetFlag m_nflags;         // Nugget flags
		BOOL              m_range_overlaps; // True if the nugget V/I range overlaps earlier nuggets
		View3DMaterial    m_mat;
	};
	struct View3DTextureOptions
	{
		View3DM4x4                 m_t2s;
		DXGI_FORMAT                m_format;
		UINT                       m_mips;
		D3D11_FILTER               m_filter;
		D3D11_TEXTURE_ADDRESS_MODE m_addrU;
		D3D11_TEXTURE_ADDRESS_MODE m_addrV;
		D3D11_BIND_FLAG            m_bind_flags;
		D3D11_RESOURCE_MISC_FLAG   m_misc_flags;
		UINT                       m_multisamp;
		UINT                       m_colour_key;
		BOOL                       m_has_alpha;
		BOOL                       m_gdi_compatible;
		char const*                m_dbg_name;
	};
	struct View3DCubeMapOptions
	{
		View3DM4x4                 m_cube2w;
		DXGI_FORMAT                m_format;
		D3D11_FILTER               m_filter;
		D3D11_TEXTURE_ADDRESS_MODE m_addrU;
		D3D11_TEXTURE_ADDRESS_MODE m_addrV;
		D3D11_BIND_FLAG            m_bind_flags;
		D3D11_RESOURCE_MISC_FLAG   m_misc_flags;
		char const*                m_dbg_name;
	};
	struct View3DSceneChanged
	{
		// How the scene was changed
		EView3DSceneChanged m_change_type;

		// An array of the context ids that changed
		GUID const* m_ctx_ids;

		// The length of the 'm_ctx_ids' array
		int m_count;

		// Pointer to the object that changed (for single object changes only)
		View3DObject m_object;
	};
	using View3D_SettingsChangedCB     = void (__stdcall *)(void* ctx, View3DWindow window, EView3DSettings setting);
	using View3D_AddFileProgressCB     = void (__stdcall *)(void* ctx, GUID const& context_id, wchar_t const* filepath, long long file_offset, BOOL complete, BOOL* cancel);
	using View3D_OnAddCB               = void (__stdcall *)(void* ctx, GUID const& context_id, BOOL before);
	using View3D_SourcesChangedCB      = void (__stdcall *)(void* ctx, EView3DSourcesChangedReason reason, BOOL before);
	using View3D_InvalidatedCB         = void (__stdcall *)(void* ctx, View3DWindow window);
	using View3D_RenderCB              = void (__stdcall *)(void* ctx, View3DWindow window);
	using View3D_SceneChangedCB        = void (__stdcall *)(void* ctx, View3DWindow window, View3DSceneChanged const&);
	using View3D_AnimationCB           = void (__stdcall *)(void* ctx, View3DWindow window, EView3DAnimCommand command, double clock);
	using View3D_GizmoMovedCB          = void (__stdcall *)(void* ctx, View3DGizmo gizmo, EView3DGizmoState state);
	using View3D_EditObjectCB          = void (__stdcall *)(
		void* ctx,             // User callback context pointer
		UINT32 vcount,         // The maximum size of 'verts'
		UINT32 icount,         // The maximum size of 'indices'
		UINT32 ncount,         // The maximum size of 'nuggets'
		View3DVertex* verts,   // The vert buffer to be filled
		UINT16* indices,       // The index buffer to be filled
		View3DNugget* nuggets, // The nugget buffer to be filled
		UINT32& new_vcount,    // The number of verts in the updated model
		UINT32& new_icount,    // The number indices in the updated model
		UINT32& new_ncount);   // The number nuggets in the updated model
	VIEW3D_API void        __stdcall View3D_LightSource              (View3DWindow window, View3DV4 position, View3DV4 direction, BOOL camera_relative);
	// Objects
	VIEW3D_API GUID              __stdcall View3D_ObjectContextIdGet       (View3DObject object);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectCreateP3DFile      (char const* name, View3DColour colour, wchar_t const* p3d_filepath, GUID const* context_id);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectCreateP3DStream    (char const* name, View3DColour colour, size_t size, void const* p3d_data, GUID const* context_id);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectCreate             (char const* name, View3DColour colour, int vcount, int icount, int ncount, View3DVertex const* verts, UINT16 const* indices, View3DNugget const* nuggets, GUID const& context_id);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectCreateInstance     (View3DObject object);
	VIEW3D_API void              __stdcall View3D_ObjectEdit               (View3DObject object, View3D_EditObjectCB edit_cb, void* ctx);
	VIEW3D_API void              __stdcall View3D_ObjectUpdate             (View3DObject object, wchar_t const* ldr_script, EView3DUpdateObject flags);
	VIEW3D_API void              __stdcall View3D_ObjectDelete             (View3DObject object);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectGetRoot            (View3DObject object);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectGetParent          (View3DObject object);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectGetChildByName     (View3DObject object, char const* name);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectGetChildByIndex    (View3DObject object, int index);
	VIEW3D_API int               __stdcall View3D_ObjectChildCount         (View3DObject object);
	VIEW3D_API void              __stdcall View3D_ObjectEnumChildren       (View3DObject object, View3D_EnumObjectsCB enum_objects_cb, void* ctx);
	VIEW3D_API BSTR              __stdcall View3D_ObjectNameGetBStr        (View3DObject object);
	VIEW3D_API char const*       __stdcall View3D_ObjectNameGet            (View3DObject object);
	VIEW3D_API void              __stdcall View3D_ObjectNameSet            (View3DObject object, char const* name);
	VIEW3D_API BSTR              __stdcall View3D_ObjectTypeGetBStr        (View3DObject object);
	VIEW3D_API char const*       __stdcall View3D_ObjectTypeGet            (View3DObject object);
	VIEW3D_API View3DM4x4        __stdcall View3D_ObjectO2WGet             (View3DObject object, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectO2WSet             (View3DObject object, View3DM4x4 const& o2w, char const* name);
	VIEW3D_API View3DM4x4        __stdcall View3D_ObjectO2PGet             (View3DObject object, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectO2PSet             (View3DObject object, View3DM4x4 const& o2p, char const* name);
	VIEW3D_API BOOL              __stdcall View3D_ObjectVisibilityGet      (View3DObject object, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectVisibilitySet      (View3DObject object, BOOL visible, char const* name);
	VIEW3D_API EView3DFlags      __stdcall View3D_ObjectFlagsGet           (View3DObject object, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectFlagsSet           (View3DObject object, EView3DFlags flags, BOOL state, char const* name);
	VIEW3D_API EView3DSortGroup  __stdcall View3D_ObjectSortGroupGet       (View3DObject object, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectSortGroupSet       (View3DObject object, EView3DSortGroup group, char const* name);
	VIEW3D_API EView3DNuggetFlag __stdcall View3D_ObjectNuggetFlagsGet     (View3DObject object, char const* name, int index);
	VIEW3D_API void              __stdcall View3D_ObjectNuggetFlagsSet     (View3DObject object, EView3DNuggetFlag flags, BOOL state, char const* name, int index);
	VIEW3D_API View3DColour      __stdcall View3D_ObjectNuggetTintGet      (View3DObject object, char const* name, int index);
	VIEW3D_API void              __stdcall View3D_ObjectNuggetTintSet      (View3DObject object, View3DColour colour, char const* name, int index);
	VIEW3D_API View3DColour      __stdcall View3D_ObjectColourGet          (View3DObject object, BOOL base_colour, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectColourSet          (View3DObject object, View3DColour colour, UINT32 mask, char const* name, EView3DColourOp op, float op_value);
	VIEW3D_API float             __stdcall View3D_ObjectReflectivityGet    (View3DObject object, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectReflectivitySet    (View3DObject object, float reflectivity, char const* name);
	VIEW3D_API BOOL              __stdcall View3D_ObjectWireframeGet       (View3DObject object, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectWireframeSet       (View3DObject object, BOOL wireframe, char const* name);
	VIEW3D_API BOOL              __stdcall View3D_ObjectNormalsGet         (View3DObject object, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectNormalsSet         (View3DObject object, BOOL show, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectResetColour        (View3DObject object, char const* name);
	VIEW3D_API void              __stdcall View3D_ObjectSetTexture         (View3DObject object, View3DTexture tex, char const* name);
	VIEW3D_API View3DBBox        __stdcall View3D_ObjectBBoxMS             (View3DObject object, int include_children);
	VIEW3D_API View3DTexture __stdcall View3D_TextureCreate               (UINT32 width, UINT32 height, void const* data, UINT32 data_size, View3DTextureOptions const& options);
	VIEW3D_API View3DTexture __stdcall View3D_TextureCreateFromUri        (wchar_t const* resource, UINT32 width, UINT32 height, View3DTextureOptions const& options);
	VIEW3D_API View3DCubeMap __stdcall View3D_CubeMapCreateFromUri        (wchar_t const* resource, UINT32 width, UINT32 height, View3DCubeMapOptions const& options);