projects/rylogic/Rylogic.Gfx/src/Gfx/View3d.cs

	
		// Set the global light source for a window
		[DllImport(Dll)] private static extern void View3D_LightSource(HWindow window, v4 position, v4 direction, bool camera_relative);

		// Objects ********************************

		// Notes:
		// 'name' parameter on object get/set functions:
		//   If 'name' is null, then the state of the root object is returned
		//   If 'name' begins with '#' then the remainder of the name is treated as a regular expression

		// Create an object from provided buffers
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectCreate([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, int vcount, int icount, int ncount, IntPtr verts, IntPtr indices, IntPtr nuggets, ref Guid context_id);

		// Create an graphics object from ldr script, either a string or a file 
		[DllImport(Dll, CharSet = CharSet.Unicode)] private static extern HObject View3D_ObjectCreateLdrW([MarshalAs(UnmanagedType.LPWStr)] string ldr_script, bool file, ref Guid context_id, ref Includes includes);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectCreateLdrA([MarshalAs(UnmanagedType.LPStr)] string ldr_script, bool file, ref Guid context_id, ref Includes includes);

		// Load a p3d model file as a view3d object
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectCreateP3DFile([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, [MarshalAs(UnmanagedType.LPStr)] string p3d_filepath, ref Guid context_id);

		// Load a p3d model in memory as a view3d object
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectCreateP3DStream([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, int size, IntPtr p3d_data, ref Guid context_id);

		// Create an ldr object using a callback to populate the model data.
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectCreateWithCallback([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, int vcount, int icount, int ncount, EditObjectCB edit_cb, IntPtr ctx, ref Guid context_id);
		[DllImport(Dll)] private static extern void View3D_ObjectEdit(HObject obj, EditObjectCB edit_cb, IntPtr ctx);

		// Replace the model and all child objects of 'obj' with the results of 'ldr_script'
		[DllImport(Dll)] private static extern void View3D_ObjectUpdate(HObject obj, [MarshalAs(UnmanagedType.LPWStr)] string ldr_script, EUpdateObject flags);

		// Delete an object, freeing its resources
		[DllImport(Dll)] private static extern void View3D_ObjectDelete(HObject obj);

		// Create an instance of 'obj'
		[DllImport(Dll)] private static extern HObject View3D_ObjectCreateInstance(HObject obj);

		// Return the context id that this object belongs to
		[DllImport(Dll)] private static extern Guid View3D_ObjectContextIdGet(HObject obj);

		// Return the root object of 'object'(possibly itself)
		[DllImport(Dll)] private static extern HObject View3D_ObjectGetRoot(HObject obj);

		// Return the immediate parent of 'object'
		[DllImport(Dll)] private static extern HObject View3D_ObjectGetParent(HObject obj);

		// Return a child object of 'object'
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectGetChildByName(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string name);
		[DllImport(Dll)] private static extern HObject View3D_ObjectGetChildByIndex(HObject obj, int index);

		// Return the number of child objects of 'object'
		[DllImport(Dll)] private static extern int View3D_ObjectChildCount(HObject obj);

		// Enumerate the child objects of 'object'. (Not recursive)
		[DllImport(Dll)] private static extern void View3D_ObjectEnumChildren(HObject obj, EnumObjectsCB enum_objects_cb, IntPtr ctx);

		// Get/Set the name of 'object'
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_ObjectNameGetBStr(HObject obj);
		[DllImport(Dll)][return: MarshalAs(UnmanagedType.LPStr)] private static extern string View3D_ObjectNameGet(HObject obj);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectNameSet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string name);

		// Get the type of 'object'
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_ObjectTypeGetBStr(HObject obj);
		[DllImport(Dll, CharSet = CharSet.Ansi)][return: MarshalAs(UnmanagedType.LPStr)] private static extern string View3D_ObjectTypeGet(HObject obj);

		// Get/Set the current or base colour of an object(the first object to match 'name') (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern uint View3D_ObjectColourGet(HObject obj, bool base_colour, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectColourSet(HObject obj, uint colour, uint mask, [MarshalAs(UnmanagedType.LPStr)] string? name, EColourOp op, float op_value);

		// Reset the object colour back to its default
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectResetColour(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the object's o2w transform
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern m4x4 View3D_ObjectO2WGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectO2WSet(HObject obj, ref m4x4 o2w, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the object to parent transform for an object.
		// This is the object to world transform for objects without parents.
		// Note: In "*Box b { 1 1 1 *o2w{*pos{1 2 3}} }" setting this transform overwrites the "*o2w{*pos{1 2 3}}".
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern m4x4 View3D_ObjectO2PGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectO2PSet(HObject obj, ref m4x4 o2p, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Return the model space bounding box for 'object'
		[DllImport(Dll)] private static extern BBox View3D_ObjectBBoxMS(HObject obj, bool include_children);

		// Get/Set the object visibility. See LdrObject::Apply for docs on the format of 'name'
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern bool View3D_ObjectVisibilityGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectVisibilitySet(HObject obj, bool visible, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set wireframe mode for an object (the first object to match 'name'). (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern bool View3D_ObjectWireframeGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectWireframeSet(HObject obj, bool wireframe, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the object flags. See LdrObject::Apply for docs on the format of 'name'
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern ELdrFlags View3D_ObjectFlagsGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectFlagsSet(HObject obj, ELdrFlags flags, bool state, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the reflectivity of an object (the first object to match 'name') (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern float View3D_ObjectReflectivityGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectReflectivitySet(HObject obj, float reflectivity, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the sort group for the object or its children. (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern ESortGroup View3D_ObjectSortGroupGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectSortGroupSet(HObject obj, ESortGroup group, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set 'show normals' mode for an object (the first object to match 'name') (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern bool View3D_ObjectNormalsGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectNormalsSet(HObject obj, bool show, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Set the texture/sampler for all nuggets of 'object' or its children. (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectSetTexture(HObject obj, HTexture tex, [MarshalAs(UnmanagedType.LPStr)] string? name);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectSetSampler(HObject obj, HSampler sam, [MarshalAs(UnmanagedType.LPStr)] string? name);

		// Get/Set the nugget flags on an object or its children (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern ENuggetFlag View3D_ObjectNuggetFlagsGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectNuggetFlagsSet(HObject obj, ENuggetFlag flags, bool state, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);

		// Get/Set the tint colour for a nugget within the model of an object or its children. (See LdrObject::Apply)
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern Colour32 View3D_ObjectNuggetTintGet(HObject obj, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_ObjectNuggetTintSet(HObject obj, Colour32 colour, [MarshalAs(UnmanagedType.LPStr)] string? name, int index);

		// Materials ******************************

		// Create a texture from data in memory.
		// Set 'data' to nullptr to leave the texture uninitialised, if not null then data must point to width x height pixel data
		// of the size appropriate for the given format. 'e.g. uint32_t px_data[width * height] for D3DFMT_A8R8G8B8'
		// Note: careful with stride, 'data' is expected to have the appropriate stride for BytesPerPixel(format) * width
		[DllImport(Dll)] private static extern HTexture View3D_TextureCreate(int width, int height, IntPtr data, int data_size, ref TextureOptions options);

		// Create one of the stock textures
		[DllImport(Dll)] private static extern HTexture View3D_TextureCreateStock(EStockTexture stock_texture);

		// Load a texture from file, embedded resource, or stock assets. Specify width == 0, height == 0 to use the dimensions of the file
		[DllImport(Dll)] private static extern HTexture View3D_TextureCreateFromUri([MarshalAs(UnmanagedType.LPStr)] string resource, int width, int height, ref TextureOptions options);

		// Load a cube map from file, embedded resource, or stock assets. Specify width == 0, height == 0 to use the dimensions of the file
		[DllImport(Dll)] private static extern HCubeMap View3D_CubeMapCreateFromUri([MarshalAs(UnmanagedType.LPStr)] string resource, ref CubeMapOptions options);

		// Create a texture sampler
		[DllImport(Dll)] private static extern HSampler View3D_SamplerCreate(ref SamplerOptions options);

		// Create one of the stock samplers
		[DllImport(Dll)] private static extern HSampler View3D_SamplerCreateStock(EStockSampler stock_sampler);
